[package]
name = "chronos"
version = "0.1.0"
edition = "2021"
authors = ["Chronos Team"]
description = "High-performance time-series database with embedded ML inference"
license = "MIT"
repository = "https://github.com/moggan1337/Chronos"
homepage = "https://github.com/moggan1337/Chronos"
documentation = "https://docs.chronos-db.dev"
keywords = ["timeseries", "database", "ml", "inference", "arrow", "analytics"]
categories = ["database", "science", "timestamp"]

[dependencies]
# Core
arrow = { version = "52.0", features = ["simd"] }
parquet = { version = "52.0", features = ["arrow", "snappy", "zstd"] }
datafusion = "37.0"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# ML
ndarray = { version = "0.15", features = ["blas", "parallel"] }
ndarray-linalg = "0.16"
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Compression
zstd = "0.12"
snappy = "0.21"
lz4 = "1.24"

# Networking
tokio-serde = "0.4"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
async-trait = "0.1"

# Storage
memmap2 = "0.9"
pagecache = "0.24"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
regex = "1.10"

# SIMD and optimization
packed_simd = "0.3"
crossbeam-utils = "0.8"

# Async execution
rayon = "1.8"
csv = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.9"
proptest = "1.4"

[[bin]]
name = "chronos"
path = "src/bin/server.rs"

[[bin]]
name = "chronos-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
